// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Textarea Textarea element - basic render: Textarea has correct default styles 1`] = `
Object {
  "::placeholder": Object {
    "color": "$theme.colors.foregroundAlt",
  },
  "backgroundColor": "$theme.colors.inputFill",
  "borderColor": "$theme.colors.inputFill",
  "borderRadius": undefined,
  "borderStyle": "solid",
  "borderWidth": "1px",
  "boxShadow": "0 2px 6px transparent",
  "boxSizing": "border-box",
  "caretColor": "$theme.colors.primary",
  "color": "$theme.colors.foreground",
  "cursor": "text",
  "display": "flex",
  "fontFamily": "$theme.typography.font300.fontFamily",
  "fontSize": "$theme.typography.font300.fontSize",
  "fontWeight": "$theme.typography.font300.fontWeight",
  "lineHeight": "$theme.typography.font300.lineHeight",
  "maxWidth": "100%",
  "outline": "none",
  "paddingBottom": "$theme.sizing.scale400",
  "paddingLeft": "$theme.sizing.scale500",
  "paddingRight": "$theme.sizing.scale500",
  "paddingTop": "$theme.sizing.scale400",
  "transitionDuration": "$theme.animation.timing100",
  "transitionProperty": "border, boxShadow, backgroundColor",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
  "width": "100%",
}
`;

exports[`Textarea Textarea element - basic render: Textarea has correct styles when compact and disabled 1`] = `
Object {
  "::placeholder": Object {
    "color": "$theme.colors.inputTextDisabled",
  },
  "backgroundColor": "$theme.colors.inputFillDisabled",
  "borderColor": "$theme.colors.inputFillDisabled",
  "borderRadius": undefined,
  "borderStyle": "solid",
  "borderWidth": "1px",
  "boxShadow": "0 2px 6px transparent",
  "boxSizing": "border-box",
  "caretColor": "$theme.colors.primary",
  "color": "$theme.colors.inputTextDisabled",
  "cursor": "not-allowed",
  "display": "flex",
  "fontFamily": "$theme.typography.font200.fontFamily",
  "fontSize": "$theme.typography.font200.fontSize",
  "fontWeight": "$theme.typography.font200.fontWeight",
  "lineHeight": "$theme.typography.font200.lineHeight",
  "maxWidth": "100%",
  "outline": "none",
  "paddingBottom": "$theme.sizing.scale200",
  "paddingLeft": "$theme.sizing.scale500",
  "paddingRight": "$theme.sizing.scale500",
  "paddingTop": "$theme.sizing.scale200",
  "transitionDuration": "$theme.animation.timing100",
  "transitionProperty": "border, boxShadow, backgroundColor",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
  "width": "100%",
}
`;

exports[`Textarea TextareaContainer - basic render: TextareaContainer has correct default styles 1`] = `undefined`;

exports[`Textarea TextareaContainer - basic render: TextareaContainer has correct styles when compact 1`] = `undefined`;

exports[`Textarea TextareaContainer - basic render: TextareaContainer has correct styles when disabled 1`] = `undefined`;

exports[`Textarea TextareaContainer - basic render: TextareaContainer has correct styles when error 1`] = `undefined`;

exports[`Textarea TextareaContainer - basic render: TextareaContainer has correct styles when focused 1`] = `undefined`;
